# Open_Canvas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  to-do.md
canvas_crawler/: __init__.py  canvas_crawler.py  cli.py  to-do.md
canvas_crawler/canvascrawler/: client.py  crawler.py  handlers.py  storage.py  utils.py
canvas_crawler/tests/: test_client.py
chunker/: cli.py  config.py  frontmatter.py  io.py  pipeline.py  schema.py
chunker/sinks/: file_sink.py  jsonl_sink.py
filterer/: cli.py
orchestrator/: cli.py  config.yml  run_pipeline.py
pre_processer/: TO-DO.md  __init__.py  main.py  run_conversion.py
pre_processer/fileConversion/: TO-DO.md  __init__.py  __main__.py  config.py  logging_utils.py  pipeline.py  policies.py  schema.py
pre_processer/fileConversion/converters/: __init__.py  docling_converter.py  markitdown_converter.py
pre_processer/fileConversion/sinks/: __init__.py  jsonl_sink.py  markdown_sink.py
scripts/: check_system_deps.sh  install_venv_deps.sh  organize_modules.py  smoke_imports.py  verify_packaging.py  verify_runtime_imports.py
