[metadata]
name = open-canvas
version = 0.0.0
description = Canvas ingest + processing pipeline

[options]
python_requires = >=3.10
include_package_data = True
packages = find:

install_requires =
    beautifulsoup4>=4.13
    requests>=2.32
    tiktoken>=0.9
    PyYAML>=6.0
    langchain-text-splitters>=0.3
    markitdown>=0.1.2
    docling
    python-dotenv>=1.1

[options.extras_require]
llm =
    openai>=1.0
test =
    pytest>=7

[options.packages.find]
where = .
include =
    orchestrator*
    chunker*
    canvas_crawler*
    pre_processer*
